<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Result:"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/et_fnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="28dp"
        android:gravity="center_horizontal"
        android:hint="first"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_snum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="second"
        android:inputType="number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Divide"
        android:textSize="24sp" />

</LinearLayout>